observation component responsive, toastr

--- a/phenology-frontend/src/app/common/camera/camera.component.html
+++ b/phenology-frontend/src/app/common/camera/camera.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="isCameraExist; else noCameraExist">
-  <div class="mt-5 ms-5">
+  <div class="mt-5">
     <div>
       <!-- <h6 class="head-title margin-top-8">
         <span>Készíts és küldj fényképet eszközöd kamerájával!</span>
