--- a/phenology-frontend/src/app/page/challenge/challenge.component.html
+++ b/phenology-frontend/src/app/page/challenge/challenge.component.html
@@ -15,10 +15,10 @@
     <h3 class="p-3 text-light text-end fw-bold">Csatlakozz hozzánk!</h3>
   </div> -->
 
-  <div class="card mx-5 mt-5 card__shadow">
-    <h3 class="card-title fw-bold mt-4 mx-5">Mit kell tenni?</h3>
+  <div class="card mx-lg-5 mt-5 card__shadow">
+    <h3 class="card-title fw-bold mt-4 mx-5 text-center text-md-left">Mit kell tenni?</h3>
     <div class="align-middle mb-5">
-      <p class="card-text mx-5">
+      <p class="card-text mx-3">
         <br />
         A feladat nagyon egyszerű, figyelni kell, hogy egy-egy növény pl. mikor
         kezd virágozni, mikor lombosodik, mikor kezd ősszel hullani a levele, és
@@ -27,7 +27,7 @@
         fejlődési fázisának kezdetét tudja megfigyelni, az is nagyon jó. Rajtunk
         múlik: amennyire lehetőségünk van, amennyit időnk, energiánk enged.
       </p>
-      <div class="mx-5 card-text">
+      <div class="mx-3 card-text">
         <div class="float__div">
           <i class="fa fa-calendar"></i>
         </div>
@@ -45,10 +45,10 @@
     </div>
   </div>
 
-  <div class="card mx-5 my-5 card__shadow">
-    <h3 class="card-title fw-bold mt-4 mx-5">Mi értelme van ennek?</h3>
+  <div class="card mx-lg-5 my-5 card__shadow">
+    <h3 class="card-title fw-bold mt-4 mx-5 text-center text-md-left">Mi értelme van ennek?</h3>
     <div class="align-middle mb-5">
-      <p class="card-text mx-5">
+      <p class="card-text mx-3">
         <br />
         A növényfenológia a növények környezeti viszonyoktól függő, szabályszerű
         egymásutánban bekövetkező jelenségeinek (rügyfakadás, virágzás, stb.)
@@ -57,7 +57,7 @@
         befolyásolja. Mivel az időjárás évről-évre másként alakul, a növények is
         évről-évre más időpontban érik el az egyes fejlettségi állapotaikat.
       </p>
-      <div class="mx-5 card-text">
+      <div class="mx-3 card-text">
         <div class="float__div">
           <i class="fa fa-leaf"></i>
         </div>
@@ -76,7 +76,7 @@
   </div>
 
   <div class="py-5">
-    <h2 class="mt-5 fw-bold text-center">
+    <h2 class="mt-5 mb-3 fw-bold text-center">
       Megfigyeléseivel bővítse Ön is hazánk fenológiai adatsorát, nemzeti
       vagyonunkat!
     </h2>
