--- a/phenology-frontend/src/app/page/challenge/challenge.component.scss
+++ b/phenology-frontend/src/app/page/challenge/challenge.component.scss
@@ -1,5 +1,5 @@
 @use '../../../styles.scss';
-
+/*
 h1 {
   font-size: 6vw;
 }
@@ -7,7 +7,7 @@ h1 {
 h2 {
   font-size: 4vw;
 }
-
+*/
 .card-text, .card-footer{
   text-align: justify;
 }
