--- a/phenology-frontend/src/app/page/history/history.component.html
+++ b/phenology-frontend/src/app/page/history/history.component.html
@@ -1,10 +1,10 @@
 <div class="container">
   <h2 class="p-3 mt-5 text-center fw-bold">A növényfenológia jelentősége</h2>
 
-  <div class="card mx-5 mt-5 card__shadow">
-    <h3 class="card-title fw-bold mt-4 mx-5">fenológia = megjelenéstan</h3>
+  <div class="card mx-lg-5 mt-5 card__shadow">
+    <h5 class="card-title fw-bold mt-4 mx-1 text-center">fenológia = megjelenéstan</h5>
     <div class="align-middle mb-5">
-      <p class="card-text mx-5">
+      <p class="card-text mx-3">
         <br />
         Az éghajlat a meteorológiai elemek sokaságának statisztikai elemzése
         révén írható le, viszont a növények életciklusának alakulása, valamint a
@@ -36,7 +36,7 @@
         az éghajat változására, így a hosszú fenológiai adatsorok hűen tükrözik
         a klíma változását.
       </p>
-      <div class="mx-5 card-text">
+      <div class="mx-3 card-text">
         <div class="float__div">
           <i class="fa fa-pagelines"></i>
         </div>
@@ -55,7 +55,7 @@
     </div>
   </div>
 
-  <div class="card mx-5 mt-5 card__shadow">
+  <div class="card mx-1 mt-5 card__shadow">
     <div class="d-flex justify-content-center">
       <img
         src="../../../assets/image/5-Figure2-1.png"
