--- a/phenology-frontend/src/app/page/full-article/full-article.component.html
+++ b/phenology-frontend/src/app/page/full-article/full-article.component.html
@@ -1,5 +1,5 @@
 <div class="container" *ngIf="article$ | async as article">
-  <h1 class="mt-5 text-center">{{ article.title }}</h1>
+  <h1 class="mt-5 text-center text-md-left">{{ article.title }}</h1>
 
   <p class="mt-3 mb-5">
     <i> {{ article.author }} </i> <br />
