--- a/phenology-frontend/src/app/page/guide/guide.component.html
+++ b/phenology-frontend/src/app/page/guide/guide.component.html
@@ -1,18 +1,18 @@
 <div class="container">
- <!--  <div class="fixed-bg row justify-content-end mr-5">
+  <!--  <div class="fixed-bg row justify-content-end mr-5">
     <div class="col-5 my-3"> -->
-      <h2 class="p-3 mt-5 text-center fw-bold">
-        Útmutató növényfenológiai megfigyelésekre
-      </h2>
-    <!-- </div>
+  <h2 class="p-3 mt-5 text-center fw-bold">
+    Útmutató növényfenológiai megfigyelésekre
+  </h2>
+  <!-- </div>
   </div> -->
 
-  <div class="card mx-5 mt-5 card__shadow">
-    <h3 class="card-title fw-bold mt-4 mx-5">
+  <div class="card mx-lg-5 mt-5 card__shadow">
+    <h3 class="card-title fw-bold mt-4 mx-5 text-center text-md-left">
       A fenológiai megfigyelések jelentősége
     </h3>
     <div class="align-middle mb-5">
-      <p class="card-text mx-5">
+      <p class="card-text mx-3">
         <br />
         A növényfenológia a növények környezeti viszonyoktól függő, szabályszerű
         egymásutánban bekövetkező jelenségeinek (rügyfakadás, virágzás, stb.)
@@ -23,7 +23,7 @@
         <br />
         <br />
       </p>
-      <div class="mx-5 card-text">
+      <div class="mx-3 card-text">
         <div class="float__div">
           <i class="fa fa-pagelines"></i>
         </div>
@@ -36,12 +36,12 @@
     </div>
   </div>
 
-  <div class="card mx-5 mt-5 card__shadow">
-    <h3 class="card-title fw-bold mt-4 mx-5">
+  <div class="card mx-lg-5 mt-5 card__shadow">
+    <h3 class="card-title fw-bold mt-4 mx-5 text-center text-md-left">
       A fenológiai megfigyelések fókusza
     </h3>
     <div class="align-middle mb-5">
-      <p class="card-text mx-5">
+      <p class="card-text mx-3">
         <br />
         A fenológiai megfigyelések fókusza annak az időpontnak a pontos
         meghatározása, amikor egy növény új fenológiai fázisba lép.
@@ -52,7 +52,7 @@
         végén, tavasz elején, ezért tanulmányozzuk a lentebb fölsorolt
         fenológiai fázisokhoz tartozó küszöbértékeket.
       </p>
-      <div class="mx-5 card-text">
+      <div class="mx-3 card-text">
         <div class="float__div">
           <i class="fa fa-leaf"></i>
         </div>
@@ -64,18 +64,18 @@
     </div>
   </div>
 
-  <div class="card mx-5 mt-5 card__shadow">
-    <h3 class="card-title fw-bold mt-4 mx-5">
+  <div class="card mx-lg-5 mt-5 card__shadow">
+    <h3 class="card-title fw-bold mt-4 mx-5 text-center text-md-left">
       Mennyi növényt kell megfigyelnem?
     </h3>
     <div class="align-middle mb-5">
-      <p class="card-text mx-5">
+      <p class="card-text mx-3">
         <br />
         Az útmutatóban szereplő növények listája azokat a fajtákat tartalmazza,
         melyeket érdemesnek tartunk a megfigyelésre. Ha valaki ezek közül
         mindet, az összes fázissal meg tudja figyelni, az szenzációs.
       </p>
-      <div class="mx-5 card-text">
+      <div class="mx-3 card-text">
         <div class="float__div">
           <i class="fa fa-envira"></i>
         </div>
@@ -86,26 +86,34 @@
     </div>
   </div>
 
-  <div class="card mx-5 mt-5 card__shadow">
-    <h3 class="card-title fw-bold mt-4 mx-5">
+  <div class="card mx-lg-5 mt-5 card__shadow">
+    <h3 class="card-title fw-bold mt-4 mx-5 text-center text-md-left">
       A megfigyelések elvégzésének folyamata
     </h3>
     <div class="align-middle mb-5">
       <br />
-      <ol class="card-text mx-5">
+      <p class="card-text mx-3">
+        A növényfenológiai megfigyeléseket hivatásos keretek között igen sok
+        részletre kiterjedően végzik. Ebben a rendszerben azonban a lehető
+        legegyszerűbb információk is megadhatók.
+      </p>
+      <ol class="card-text mx-3">
         <li>
           A növény <b>fajtájának</b> pontos azonosítása
           <p>
-            Nagyon fontos, hogy a növényeket pontoson beazonosítsuk, ebben segít
-            az útmutató második felében azok fényképekkel illusztrált részletes
-            leírása.
+            Nagyon fontos, hogy a növényeket pontoson beazonosítsuk. Ebben segít
+            a növények fényképekkel illusztrált részletes
+            <a [routerLink]="'/plant'" class="card-link">bemutatása</a>.
           </p>
         </li>
         <li>
           Az <b>új fenológiai fázis</b> azonosítása
           <p>
             Az új fenológiai fázisba lépést akkor tudjuk pontosan azonosítani,
-            ha a kiválasztott növényt napról-napra szemmel tartjuk.
+            ha a kiválasztott növényt napról-napra szemmel tartjuk. Mivel ez nem
+            mindig sikerül, lehetőség van arra is, hogy nem a fázis kezdetét,
+            hanem annk létét adjuk meg, mert ennek is van jelentősége. Például
+            virágzik a som, vagy éppen nyugalmi állapotban van a mogyoró.
           </p>
         </li>
         <li>
@@ -122,7 +130,7 @@
       </ol>
       <br />
 
-      <div class="mx-5 card-text">
+      <div class="mx-3 card-text">
         <div class="float__div">
           <i class="fa fa-eye"></i>
         </div>
@@ -134,17 +142,19 @@
     </div>
   </div>
 
-  <div class="card mx-5 mt-5 card__shadow">
-    <h3 class="card-title fw-bold mt-4 mx-5">A megfigyelések rögzítése</h3>
+  <div class="card mx-lg-5 mt-5 card__shadow">
+    <h3 class="card-title fw-bold mt-4 mx-5 text-center text-md-left">
+      A megfigyelések rögzítése
+    </h3>
     <div class="align-middle mb-5">
-      <p class="card-text mx-5">
+      <p class="card-text mx-3">
         <br />
         A megfigyeléseket kérjük az OMSZ növényfenológiai megfigyelései
         portálján, azaz ezen az oldalon rögzíteni. A rögzítéshez egy egyszeri
-        regisztrációt követően kapunk jogosultságot. Az alabbi adatokat adjuk
-        meg:
+        <a [routerLink]="'/register'" class="card-link">regisztrációt</a>
+        követően kapunk jogosultságot. Az alabbi adatokat adjuk meg:
       </p>
-      <ol class="card-text mx-5">
+      <ol class="card-text mx-3">
         <li>
           <p>
             A megfigyelt növény <b>helyszíne</b> (település, településrész, pl:
@@ -169,7 +179,7 @@
           </p>
         </li>
       </ol>
-      <div class="mx-5 card-text">
+      <div class="mx-3 card-text">
         <div class="float__div">
           <i class="fa fa-calendar"></i>
         </div>
@@ -181,14 +191,14 @@
     </div>
   </div>
 
-  <div class="card mx-5 mt-5 card__shadow">
-    <h3 class="card-title fw-bold mt-4 mx-5">
+  <div class="card mx-lg-5 mt-5 card__shadow">
+    <h3 class="card-title fw-bold mt-4 mx-5 text-center text-md-left">
       Fenológiai fázisok
     </h3>
     <div class="align-middle mb-5">
-      <h5 class="mt-5 mx-5"><b>Fák és cserjék</b></h5>
+      <h5 class="mt-5 mx-3"><b>Fák és cserjék</b></h5>
       <br />
-      <ol class="card-text mx-5">
+      <ol class="card-text mx-3">
         <li>
           <b>Rügyfakadás</b>
           <p>
@@ -199,9 +209,9 @@
         <li>
           <b>Lombosodás kezdete</b>
           <p>
-            A rügyekből megjelentek az első zöld levelek, a fa távolról már
-            nem látszik csupasznak. A som estében először a virágok nyílnak,
-            csak ez után kezdődik a lombosodás.
+            A rügyekből megjelentek az első zöld levelek, a fa távolról már nem
+            látszik csupasznak. A som estében először a virágok nyílnak, csak ez
+            után kezdődik a lombosodás.
           </p>
         </li>
         <li>
@@ -240,26 +250,127 @@
       </ol>
       <br />
 
-      <h5 class="mx-5"><b>Lágyszárúak</b></h5>
-      <ol class="card-text mx-5">
+      <h5 class="mx-3"><b>Lágyszárúak</b></h5>
+      <ol class="card-text mx-3">
         <li>
           <b>Virágzás kezdete</b>
           <p>Az első teljes mértékben kinyílt virágok megjelenése.</p>
         </li>
       </ol>
       <br />
-      <div class="mx-5 card-text">
+      <div class="mx-3 card-text">
         <div class="float__div">
           <i class="fa fa-pagelines fa-pagelines-autumn"></i>
         </div>
-        A lista egy általános leírás, egyes növényfajták fenológiai
-        fázisai nem az alább leírt sorrendben következnek be. Például a som
-        virágzása megelőzi a lombosodást.
+        A lista egy általános leírás, egyes növényfajták fenológiai fázisai nem
+        az alább leírt sorrendben következnek be. Például a som virágzása
+        megelőzi a lombosodást.
       </div>
     </div>
   </div>
 
- <!--
+  <div class="card mx-lg-5 mt-5 card__shadow">
+    <h3 class="card-title fw-bold mt-4 mx-5 text-center text-md-left">
+      A megfigyelési portál használata
+    </h3>
+    <div class="align-middle mb-5">
+      <p class="card-text mx-3">
+        <br />
+        A megfigyeléseket az alábbi lépésekkel tudjuk rögzíteni:
+      </p>
+      <ol class="card-text mx-3">
+        <li>
+          <b>Regisztráció</b>
+          <p>
+            A rögzítéshez egy egyszeri
+            <a [routerLink]="'/register'" class="card-link">regisztrációt</a>
+            követően kapunk jogosultságot. A regisztrációnál egy érvényes email
+            címet és jelszót kell megadnunk. Erre a címre kapunk egy levelet,
+            amelyben egy, a regisztráció megerősítését lehetővé tevő link
+            található. A linkre kattintva aktiválódik a regisztrációnk.
+          </p>
+        </li>
+        <li>
+          <b>Megfigyelés kötelező elemek</b>
+          <p>
+            A megfigyelésnél kötelező elemként a megfigyelés <b>dátumát</b> az
+            erre szolgáló beviteli mezőben egy dátumválasztó táblázatból lehet
+            megadni. Jövőre vonatkozó időpont nem adható meg. <br />
+            A <b>helyszínt</b> úgy adjuk meg, hogy az beazonosítható legyen,
+            lehetőleg települést, vagy hivatalos földrajzi helyet. A
+            <b>növény</b> és annak fenológiai <b>fázisa</b> listából
+            kiválasztható. A <b>megfigyelés elküldésével</b> rögzíthetjük az
+            adatbázisban a megfigyelésünket, mely megjelenik a
+            <a [routerLink]="'/data'" class="card-link"
+              >beérkezett megfigyelések</a
+            >
+            között.
+          </p>
+        </li>
+        <li>
+          <b>Megfigyelés nem kötelező elemek</b>
+          <p>
+            A megfigyelésnél lehetőség van <b>fénykép készítésére</b> eszközünk,
+            telefonunk kamerájával, amennyiben ezt engedélyezzük készülékünkön.
+            Több kép is készíthető a fénykép exponálása gombbal. <br />
+            Lehetőség van <b>korábban készített</b> képek kiválasztására is.
+            <br />
+            A készített, kiválasztott képek megjelennek a beviteli oldalon, azok
+            <b>törölhetőek</b> még a megfigyelés rögzítése előtt. <br />
+            A <b>megjegyzés</b> mezőben olyan információkat adhatunk meg, mint
+            például a helyszín domborzata (déli, északi lejtő), egy vagy több
+            növényt figyelünk meg, azok hány százaléka lépett a megadott
+            fenológiai fázisba.
+          </p>
+        </li>
+        <li>
+          <b>Elefejtett jelszó</b>
+          <p>
+            Amennyiben elfelejtettük jelszavunkat, a
+            <a [routerLink]="'/login'" class="card-link">bejelentkezés</a>
+            oldalon lehetőség van új jelszót kérni email címünk megadásával.
+            Ekkor egy levelet kapunk egy linkkkel, mellyel új jelszót
+            állíthatunk be.
+          </p>
+        </li>
+        <li>
+          <b>Profil</b>
+          <p>
+            Sikeres bejelentkezés után a 'Profil' menüpontban módosíthatjuk
+            adatainkat (módosíthatjuk nevünket, megadhatunk új jelszót) email
+            címünk kivételével.
+          </p>
+        </li>
+        <li>
+          <b>Saját megfigyelések</b>
+          <p>
+            Sikeres bejelentkezés után a 'Saját megigyelések' menüpontban
+            láthatjuk az átlalunk beküldött megfigyeléseket. Saját
+            megfigyeléseink törölhetőek. <br />
+            Amennyiben hibás megfigyelést küldtünk be, nyugodtan törölhetjük,
+            majd küldhetünk újat.
+          </p>
+        </li>
+      </ol>
+      <div class="mx-3 card-text">
+        <div class="float__div">
+          <i class="fa fa-mobile"></i>
+        </div>
+        <br />
+        Minden olyan feltöltött tartalom, mely nem növényfenológiai témájú,
+        törlésre kerül az oldalról az
+        <a
+          [routerLink]="'/assets/fenologia_jogi_nyilatkozat.pdf'"
+          class="card-link"
+          >adatvédelmi szabályzatnak</a
+        >
+        megfelelően. Az ilyen tartalmat feltöltő felhasználó pedig akár végleges
+        kizárásra is kerülhet.
+      </div>
+    </div>
+  </div>
+
+  <!--
 
   <div class="card m-5 shadow" style="max-width: 100vw">
     <div class="row">
@@ -403,3 +514,4 @@
   </div>
 </div>
  -->
+</div>
