--- a/phenology-frontend/src/app/page/guide/guide.component.scss
+++ b/phenology-frontend/src/app/page/guide/guide.component.scss
@@ -1,5 +1,6 @@
 @use '../../../styles.scss';
 
+/*
 h1 {
   font-size: 6vw;
 }
@@ -8,7 +9,6 @@ h2 {
   font-size: 4vw;
 }
 
-/*
 h3 {
   font-size: 3vw;
 }
@@ -69,6 +69,11 @@ i {
 
 .fa-pagelines-autumn {
   color: rgb(196, 157, 0);
+}
+
+.fa-mobile {
+  color: black;
+  font-size: 10em;
 }
 
 .card-background{
