--- a/phenology-frontend/src/app/page/guide/individual-plant-guide/individual-plant-guide.component.html
+++ b/phenology-frontend/src/app/page/guide/individual-plant-guide/individual-plant-guide.component.html
@@ -1,11 +1,11 @@
 <div *ngIf="plant$ | async as plant" class="mx-auto m-5">
   <div>
-    <div class="my-5">
+    <div class="my-lg-5">
       <h3 class="text-center fw-bold mt-5">{{ plant.name }}</h3>
 
       <h6 class="text-center fw-bold mb-5">{{ plant.latin }}</h6>
 
-      <p class="m-5">
+      <p class="m-lg-5 m-2">
         {{ plant.description }}
       </p>
     </div>
