--- a/phenology-frontend/src/app/page/history/history.component.scss
+++ b/phenology-frontend/src/app/page/history/history.component.scss
@@ -1,3 +1,4 @@
+/*
 h1 {
   font-size: 6vw;
 }
@@ -5,7 +6,7 @@ h1 {
 h2 {
   font-size: 4vw;
 }
-
+*/
 .card-text, .card-footer{
   text-align: justify;
 }
