routing settings, formating

--- a/phenology-frontend/src/app/page/forgot-password/forgot-password.component.html
+++ b/phenology-frontend/src/app/page/forgot-password/forgot-password.component.html
@@ -28,16 +28,16 @@
 </div>
 
 <div *ngIf="forgotPasswordStatus === 'success'" class="m-3">
-  <h3 class="m-2 text-center">Az új jelszó igénylése sikerült.</h3>
-  <h5 class="m-2 text-center">
+  <h3 class="my-5 text-center">Az új jelszó igénylése sikerült.</h3>
+  <h5 class="my-5 text-center">
     A megadott email címre küldtünk egy levelet, melyben a linkre kattintva
     beállíthat új jelszót. Köszönjük!
   </h5>
 </div>
 
 <div *ngIf="forgotPasswordStatus === 'failed'" class="m-3">
-  <h3 class="m-2 text-center">Az új jelszó igénylése nem sikerült.</h3>
-  <h5 class="m-2 text-center">
+  <h3 class="my-5 text-center">Az új jelszó igénylése nem sikerült.</h3>
+  <h5 class="my-5 text-center">
     Kérjük adjon meg olyan email címet, amellyel korábban regisztrált
     oldalunkon, vagy regisztráljon újra. Köszönjük!
   </h5>
