--- a/phenology-frontend/src/app/page/observed-datas/observed-datas.component.html
+++ b/phenology-frontend/src/app/page/observed-datas/observed-datas.component.html
@@ -56,7 +56,7 @@
                 <img
                   src="{{ backendImageURL }}{{ photo }}"
                   class="myImg"
-                  alt="nincs meg a kép"
+                  alt="feltöltött kép"
                   style="width: 100px"
                   (click)="photoEnlarge(backendImageURL + photo)"
                 />
