--- a/phenology-frontend/src/app/page/personal-observed-datas/personal-observed-datas.component.html
+++ b/phenology-frontend/src/app/page/personal-observed-datas/personal-observed-datas.component.html
@@ -23,7 +23,7 @@
 
       <div>{{ selectedPlant }}</div>
 
-      <table class="table table-striped">
+      <table class="table">
         <thead>
           <tr>
             <th>Dátum</th>
@@ -92,7 +92,7 @@
           </tr>
         </tbody>
       </table>
-      <div class="mx-auto">
+      <div class="d-flex justify-content-center">
         <style>
           .my-pagination /deep/ .ngx-pagination .current {
             background: darkgreen;
