--- a/phenology-frontend/src/app/page/personal-observed-datas/personal-observed-datas.component.scss
+++ b/phenology-frontend/src/app/page/personal-observed-datas/personal-observed-datas.component.scss
@@ -1,3 +1,9 @@
+@use '../../../styles.scss';
+
+tr:nth-child(even) {
+  background-color: styles.$light-base-color;
+}
+
 /* Style the Image Used to Trigger the Modal */
 .myImg {
   border-radius: 5px;
