--- a/phenology-frontend/src/app/page/register/register.component.html
+++ b/phenology-frontend/src/app/page/register/register.component.html
@@ -169,9 +169,10 @@
       <div *ngIf="registrationOK" class="m-3">
         <h3 class="m-2">Sikeres regisztráció</h3>
         <h5 class="m-2">
-          Még egy utolsó lépés: <br />
-          a megadott email címre küldtünk egy levelet, melyben a linkre
-          kattintva aktiválódik a regisztrációja. Köszönjük!
+          Már csak egy utolsó lépés van hátra: <br /><br>
+          A megadott email címre küldtünk egy levelet, melyben a linkre
+          kattintva aktiválódik a regisztrációja. <br> <br>
+          Köszönjük!
         </h5>
       </div>
     </div>
