--- a/phenology-frontend/src/app/page/reset-password/reset-password.component.html
+++ b/phenology-frontend/src/app/page/reset-password/reset-password.component.html
@@ -1,5 +1,5 @@
-<div class="card my-2 shadow">
-  <h4 class="card-header">Új jelszó beállítása</h4>
+<div class="card my-5 px-2 px-md-0 shadow col-12 col-md-10 offset-md-1 col-lg-6 offset-lg-3">
+  <h4 class="card-header text-center">Új jelszó beállítása</h4>
   <div *ngIf="resetPasswordStatus === ''">
     <div class="card-body">
       <form [formGroup]="form" (ngSubmit)="onSubmit()">
@@ -53,12 +53,12 @@
           </div>
         </div>
 
-        <div class="form-group m-2">
-          <button [disabled]="loading" class="btn btn-primary">
-            <span
+        <div class="form-group m-2 d-flex justify-content-center">
+          <button [disabled]="loading" class="btn btn-primary m-2">
+            <!-- <span
               *ngIf="loading"
               class="spinner-border spinner-border-sm mr-1"
-            ></span>
+            ></span> -->
             Rendben
           </button>
           <button type="button" class="btn btn-primary m-2" (click)="onCancel()">Mégsem</button>
@@ -69,17 +69,18 @@
 
 
   <div *ngIf="resetPasswordStatus === 'success'" class="m-3">
-    <h3 class="m-2">Az új jelszó beállítása sikerült</h3>
-    <h5 class="m-2">
+    <h3 class="my-5 text-center">Az új jelszó beállítása sikerült</h3>
+    <h5 class="my-5">
       Új megfigyelés rögzítéséhez kérjük
       <a routerLink="../../../login">jelentkezzen be</a>! Köszönjük.
     </h5>
   </div>
 
   <div *ngIf="resetPasswordStatus === 'failed'" class="m-3">
-    <h3 class="m-2">Az új jelszó beállítása nem sikerült</h3>
-    <h5 class="m-2">
+    <h3 class="my-5 text-center">Az új jelszó beállítása nem sikerült</h3>
+    <h5 class="my-5">
       Az emailben kapott link érvényessége biztonsági okokból lejárt.
+      <br>
       <br>
       Kérjük igényeljen
       <a routerLink="../../../forgotPassword" class="btn btn-link">új jelszót</a>
