--- a/phenology-frontend/src/styles.scss
+++ b/phenology-frontend/src/styles.scss
@@ -12,5 +12,5 @@ $base-font: Roboto;
 $base-box-shadow: 0px 20px 30px -20px;
 
 .toast-success {
-  background-color: $base-color;
+  background-color: $lighten-base-color;
 }
