--- a/phenology-frontend/src/app/page/profile/profile.component.html
+++ b/phenology-frontend/src/app/page/profile/profile.component.html
@@ -184,8 +184,9 @@
     </div>
     <div *ngIf="profileUpdateError" class="my-5">
       <h3 class="text-center">
-        Sikertelen regisztráció! Ezzel az email címmel már regisztráltak.
-        Amennyiben az email cím az Öné, kérhet új jelszót.
+        A profil szerkesztése nem sikerült. <br>
+        Kérjük jelentkezzen ki a rendszerből, majd lépjen be újra! <br>
+        Köszönjük!
       </h3>
     </div>
   </div>
